# jnienv

./: CMakeLists.txt  README.md  jnienv.c  jnienv.h  main.c
include/: jnienv.h
src/: jnienv.c  main.c
